Closed Bug 1206703 Opened 9 years ago Closed 9 years ago

[css-grid] In an empty grid all lines should be treated as 'auto' for abs.pos. items, i.e. snap to the padding edge

Categories

(Core :: Layout, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox43 --- affected
firefox44 --- fixed

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: testcase)

Attachments

(2 files)

Attached file testcase
When there are no in-flow grid items and no explicit grid template properties, then the grid has no tracks and thus no lines. So all lines for abs.pos. items should count as being outside the grid and snap to the corresponding padding edge. What we're currently doing is clamp any definite line numbers to the grid range, which in this case is 1..1, so we wrongly resolve definite lines to line 1. We actually have a couple of tests for this, but I failed to recognize them as failures in bug 1194888. :-(
Attached patch fix+testSplinter Review
I could add an assertion about this in ToPositionAndLengthForAbsPos() but I'm not since I have other patches in my queue that will in fact assert in this case (which is how I found it!). https://treeherder.mozilla.org/#/jobs?repo=try&revision=b5b8bafd2899
Attachment #8663659 - Flags: review?(dholbert)
Attachment #8663659 - Attachment is patch: true
Attachment #8663659 - Attachment mime type: text/html → text/plain
Blocks: 1194888
Comment on attachment 8663659 [details] [diff] [review] fix+test r=me
Attachment #8663659 - Flags: review?(dholbert) → review+
Flags: in-testsuite+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Blocks: 1215099
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: